#744 Remove the hardwood.simd.disabled system property
The property forced scalar decode even when the incubating Vector API module
was present, but it duplicates an opt-out that already exists: SIMD engages only
when --add-modules jdk.incubator.vector is on the module path, and VectorSupport
already falls back to scalar (via its catch of the linkage error) when the module
is absent. Omitting the launch flag is therefore the way to select scalar, so the
property carried no unique capability and nothing referenced it.